other/b-d/check-serviceaccount/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: safe
  namespace: check-sa-ns
