other/b-d/check-serviceaccount/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: check-sa-ns
spec:
  serviceAccountName: safe
  containers:
  - image: busybox:1.35
    name: busybox
    args:
    - sleep
    - "300"
